--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									<div class="4u$"><span class="image fit"><img src="images/Eboard group pic.jpg" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/Group1.jpg" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/NowThis.PNG" alt="" /></span></div>
-									<div class="4u$"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+									<div class="4u$"><span class="image fit"><img src="images/debate.png" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/pic20.JPG" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/politics-pastries_symone-2.jpg" alt="" /></span></div>
 									<div class="4u$"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
