--- a/index.html
+++ b/index.html
@@ -236,16 +236,10 @@
 					<!-- four -->
 						<section id="four" class="wrapper style3 fade-up">
 							<div class="inner">
-								<h2>National Voter Registration Drive</h2>
+								<h2>Past Events</h2>
 								<!-- Oskar, enter the link to the application in between the quotes after href below -->
 								<b>About</b>
-								<p>The Unruh Associates is proud to announce a new initiative for the Fall 2018 semester. Vote SC, created in conjunction with the USC Unruh Institute of Politics and the Undergraduate Student Government, is the largest effort to register students to vote in USC’s history. Centered on bringing voting into the 21st century and putting the power to register to vote directly in the hands of students, Vote SC  has created an online platform ( <a href="http://votesc.turbovote.org" target="_blank">VoteSC Turbovote</a> ) that allows students to register online at their convenience and with ease. Vote SC seeks to connect with all students in USC’s diverse student body, and thus through our online voter platform have created the opportunity to engage with students who come from all different states as well as students who are already registered to vote. </p>
-
-            <p> Vote SC in itself is a coalition that seeks to bring together a variety of campus groups in order to face this challenge on our campus head-on. The idea for this coalition originated by looking at the abysmal rates of students on campus who vote, as well as the amounts of undergraduate students who are still not registered to vote. With this lofty goal in mind, Vote SC sought to bring together a variety of student groups in order to engage with every facet of the student population. The coalition has grown beyond its founders to include over 15 student groups, ranging from a variety of political organizations, cultural assemblies, and service organizations. Our ultimate goal is to make voting a seamless and essential part of every student’s time at USC, and to foster a campus culture that promotes civic engagement and breaks down barriers for students to get politically involved. </p>
-
-            One way that we’re seeking to engage with our student body this semester is by hosting another edition of our biannual voter competition with our crosstown rivals, UCLA. The competition, last held in 2016, challenges both schools to register as many voters on their campus as possible. UCLA won the competition in 2016 by soundly beating USC, and so this year we are going to be tabling every Monday on Trousdale for our signature Midterm Mondays program, as well as launching a campus wide campaign for National Voter Registration Day on September 25th in the hopes of wrestling the title away from UCLA.
-
-            Looking to get involved with Vote SC? We are always on the lookout for new organizations to partner with and student volunteers. Check out our Facebook page, Vote SC, for more information on upcoming events, and email us at <a href="mailto:votesc@turbovote.org">votesc@turbovote.org</a> for more information. </p>
+								<p>Unruh Associates is proud of hosting multiple discussions between political organizations at USC and fostering civil discussion along with other events. Here are some of Unruh Associate's past events. </p>
 
 								<!-- <h3>Frequently Asked Questions</h3>
 
