--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<a href="#" class="image"><img src="images/obama.jpeg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>We inspire students to fulfill their political and civic potential...
+									<h2>WE HAVE A NEW WEBSITE!! Copy and Paste This Link! https://unruhassociates.squarespace.com
 									</h2>
 								</div>
 							</div>
