--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>foster the respectful exchange of beliefs all over the political spectrum...
+									<h2>WE HAVE A NEW WEBSITE!! Copy and Paste This Link! https://unruhassociates.squarespace.com
 									</h2>
 								</div>
 							</div>
@@ -79,7 +79,7 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>and connect individuals across diverse communities who are interested in civic leadership and political engagement.
+									<h2>WE HAVE A NEW WEBSITE!! Copy and Paste This Link! https://unruhassociates.squarespace.com
 									</h2>
 								</div>
 							</div>
